# viki

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  Modelfile.viki_evolved  PRE_RELEASE.md  README.md  SECURITY.md  SETUP.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  requirements.txt  test_cors.html  validate_imports.py  verify_orythix.py
.agent/: META_COGNITION.md
.agent/workflows/: hacking.md  run-viki.md  short-video.md
.githooks/: commit-msg
.github/workflows/: release.yml
plans/: SECURITY_AUDIT_REPORT.md
scripts/: demo_architect.py  export_viki_dataset.py  export_viki_knowledge.py  ollama_oven.py  test_born_again.py  test_vision_refactor.py  verify_dream.py  verify_ensemble.py  verify_ensemble_phase5.py  verify_evolution.py  verify_forge.py  verify_identity_drive.py  verify_memory.py  verify_world.py  verify_world_engine.py  video_assembly_template.py
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
ui/public/: robots.txt  sitemap.xml
ui/src/: AlertUI.jsx  App.css  App.jsx  Dashboard.jsx  HologramFace.css  HologramFace.jsx  HologramGirl3D.jsx  index.css
viki/: ARCHITECTURE_REFACTOR.md  DOCS_INDEX.md  IMPLEMENTATION_SUMMARY.md  MODEL_ENHANCEMENT_SUMMARY.md  Modelfile  Modelfile.bak  OBSERVABILITY.md  PERFORMANCE_NOTES.md  POSITIONING.md  SECURITY_SETUP.md  forge.py  main.py
viki/api/: __init__.py  discord_bridge.py  nexus.py  server.py  slack_bridge.py  telegram_bridge.py  whatsapp_bridge.py
viki/config/: admin.yaml  dynamic_directives.yaml  logger.py  models.yaml  resolve.py  security_layer.md  settings.yaml  soul.yaml
viki/config/personas/: dev.yaml  home.yaml  research.yaml  sovereign.yaml
viki/core/: ab_testing.py  benchmark.py  bio.py  capabilities.py  continuous_learning.py  controller.py  cortex.py  deliberation.py  dream.py  embeddings.py  ensemble.py  evolution.py  filesystem_v2.py  governor.py  history.py  judgment.py  knowledge_gaps.py  learning.py  llm.py  memory.py  mission_control.py  proactive.py  reflector.py  reflex.py  safety.py  schema.py  scorecard.py  self_model.py  signals.py  soul.py  super_admin.py  tts_backends.py  voice.py  world.py
viki/core/memory/: __init__.py  hybrid_search.py  identity.py  narrative.py
viki/core/utils/: __init__.py  debouncer.py  path_sandbox.py
viki/dashboard/: index.html
viki/integrations/: __init__.py  gmail_client.py  google_calendar_client.py
viki/skills/: base.py  registry.py  thinking.py
viki/skills/builtins/: __init__.py  browser_skill.py  calendar_skill.py  clipboard_skill.py  data_analysis_skill.py  dev_skill.py  email_skill.py  filesystem_skill.py  gif_skill.py  image_gen_skill.py  interpreter_skill.py  legacy_math.py  math_skill.py  media_skill.py  messaging_skill.py  notification_skill.py  obsidian_skill.py  overlay_skill.py  pdf_skill.py  sfs_skill.py  (+19 more)
viki/tests/: test_learning.py  test_models.yaml  test_security_layer.py  test_settings.yaml  test_super_admin.py  test_viki_integration.py
viki/ui/: overlay.py
(+2 files in other folders)
