[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viki-sdi"
version = "7.3.0"
description = "VIKI Sovereign Digital Intelligence — local-first autonomous AI agent with Ollama, Orythix cognitive architecture, and recursive self-improvement"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "ai-agent",
    "autonomous-agent",
    "ollama",
    "local-llm",
    "privacy-first",
    "sovereign-ai",
    "react-agent",
    "orythix",
    "cognitive-architecture",
    "tool-use",
    "cli-assistant",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic",
    "pyyaml",
    "python-dotenv",
    "requests",
    "rich",
    "colorama",
    "tqdm",
    "psutil",
    "sqlite-utils",
    "openai",
    "instructor",
    "anthropic",
    "ollama",
    "sentence-transformers",
    "duckduckgo-search",
    "numpy",
    "scipy",
    "torch",
    "torchaudio",
    "pillow",
    "opencv-python",
    "playwright",
    "watchdog",
    "pyautogui",
    "pyperclip",
    "pyttsx3",
    "flask",
    "flask-cors",
    "beautifulsoup4",
    "aiohttp",
    "sounddevice",
    "python-telegram-bot",
    "discord.py",
    "pandas",
    "openpyxl",
    "matplotlib",
    "python-pptx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
viki = "viki.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["viki*"]
